syntax = "proto3";

service RPCExample {
  rpc PredictFromInput (PredictFromInputRequest) returns (PredictFromResponse) {}
}

message PredictFromInputRequest {
  string input = 1;
}

message PredictFromResponse {
  int32 input = 1;
}